--- a/ParaModel/ParaModel.vcxproj
+++ b/ParaModel/ParaModel.vcxproj
@@ -117,6 +117,7 @@
     <ClInclude Include="camera.h" />
     <ClInclude Include="GLWidget.h" />
     <ClInclude Include="paraoglmanager.h" />
+    <ClInclude Include="ParaType.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
