--- a/ParaModel/ParaModel.vcxproj.filters
+++ b/ParaModel/ParaModel.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="resourcemanager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ParaType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="bqgraphicsscene.h">
