--- a/ParaModel/ParaModel.vcxproj
+++ b/ParaModel/ParaModel.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="bqgraphicsscene.cpp" />
     <ClCompile Include="bqgraphicsview.cpp" />
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="DimDataConvert.cpp" />
     <ClCompile Include="paraoglmanager.cpp" />
     <ClCompile Include="ParaModel.cpp" />
     <ClCompile Include="resourcemanager.cpp" />
@@ -112,6 +113,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DimDataConvert.h" />
     <ClInclude Include="ParaType.h" />
     <ClInclude Include="resourcemanager.h" />
     <ClInclude Include="ShaderProc.h" />
