git 排除项目文件

--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,6 @@ debug
 Release
 obj/
 .vs/
-/HS.rar
+/ParaModel/ParaModel.vcxproj
+/ParaModel/ParaModel.vcxproj.filters
+/ParaModel/ParaModel.vcxproj.user
