--- a/ParaModel/ParaModel.vcxproj
+++ b/ParaModel/ParaModel.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="ParaModel.cpp" />
     <ClCompile Include="resourcemanager.cpp" />
     <ClCompile Include="ShaderProc.cpp" />
+    <ClCompile Include="WarheadDataConvert.cpp" />
     <ClCompile Include="WarheadParaModel.cpp" />
     <QtRcc Include="ParaModel.qrc" />
     <QtUic Include="ParaModel.ui" />
@@ -118,6 +119,7 @@
     <ClInclude Include="ParaType.h" />
     <ClInclude Include="resourcemanager.h" />
     <ClInclude Include="ShaderProc.h" />
+    <ClInclude Include="WarheadDataConvert.h" />
     <QtMoc Include="WarheadParaModel.h" />
     <QtMoc Include="bqgraphicsscene.h" />
     <QtMoc Include="bqgraphicsitem.h" />
