--- a/ParaModel/ParaModel.vcxproj.filters
+++ b/ParaModel/ParaModel.vcxproj.filters
@@ -70,6 +70,9 @@
     <ClCompile Include="DimDataConvert.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WarheadParaModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GLWidget.h">
@@ -108,6 +111,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="bqgraphicsview.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="WarheadParaModel.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
