--- a/ParaModel/ParaModel.vcxproj.filters
+++ b/ParaModel/ParaModel.vcxproj.filters
@@ -73,6 +73,12 @@
     <ClCompile Include="WarheadParaModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WarheadDataConvert.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WarheadOglManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GLWidget.h">
@@ -102,6 +108,9 @@
     <ClInclude Include="WarheadDataConvert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WarheadOglManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="bqgraphicsscene.h">
@@ -121,12 +130,6 @@
     </QtMoc>
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\shaders\GLSL_YELLOW.frag">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="res\shaders\GLSL_YELLOW.vert">
-      <Filter>Resource Files</Filter>
-    </None>
     <None Include="res\shaders\coordinate.frag">
       <Filter>Resource Files</Filter>
     </None>
@@ -167,6 +170,12 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="res\shaders\window.vert">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\shaders\WarheadColumn.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\shaders\WarheadColumn.vert">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
