--- a/ParaModel/ParaModel.vcxproj.filters
+++ b/ParaModel/ParaModel.vcxproj.filters
@@ -70,8 +70,6 @@
     <ClCompile Include="DimDataConvert.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-<<<<<<< HEAD
-=======
     <ClCompile Include="WarheadParaModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -81,7 +79,6 @@
     <ClCompile Include="WarheadOglManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
->>>>>>> 86c2c30fe7520ea210275a00186eee4dbce59859
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GLWidget.h">
@@ -108,15 +105,12 @@
     <ClInclude Include="DimDataConvert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-<<<<<<< HEAD
-=======
     <ClInclude Include="WarheadDataConvert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WarheadOglManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
->>>>>>> 86c2c30fe7520ea210275a00186eee4dbce59859
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="bqgraphicsscene.h">
@@ -131,8 +125,17 @@
     <QtMoc Include="bqgraphicsview.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="WarheadParaModel.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
+    <None Include="res\shaders\GLSL_YELLOW.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\shaders\GLSL_YELLOW.vert">
+      <Filter>Resource Files</Filter>
+    </None>
     <None Include="res\shaders\coordinate.frag">
       <Filter>Resource Files</Filter>
     </None>
