--- a/ParaModel/ParaModel.vcxproj
+++ b/ParaModel/ParaModel.vcxproj
@@ -16,6 +16,7 @@
     <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">10.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">10.0.19041.0</WindowsTargetPlatformVersion>
     <QtMsBuild Condition="'$(QtMsBuild)'=='' OR !Exists('$(QtMsBuild)\qt.targets')">$(MSBuildProjectDirectory)\QtMsBuild</QtMsBuild>
+    <PreferredToolArchitecture>x64</PreferredToolArchitecture>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
@@ -55,18 +56,18 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <IncludePath>D:\Study\Work\HS\Ajinajin\paraModel\ParaModel\SARibbon\src\SARibbonBar;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Study\paraModel\ParaModel\SARibbon\src\SARibbonBar;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Link />
     <ClCompile>
-      <AdditionalIncludeDirectories>D:\Qt\5.12.11\5.12.11\msvc2017_64\lib;D:\Qt\5.12.11\5.12.11\msvc2017_64\include\ActiveQt;D:\Qt\5.12.11\5.12.11\msvc2017_64\include\QtXml;GeneratedFiles\$(ConfigurationName);GeneratedFiles;.;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Qt\5.12.11\msvc2017_64\lib;C:\Qt\5.12.11\msvc2017_64\include\ActiveQt;C:\Qt\5.12.11\msvc2017_64\include\QtXml;GeneratedFiles\$(ConfigurationName);GeneratedFiles;.;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>C:\openssl\lib;C:\Utils\my_sql\mysql-5.6.11-winx64\lib;C:\Utils\postgresql\pgsql\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>shell32.lib;D:\Qt\5.12.11\5.12.11\msvc2017_64\lib\qtmaind.lib;D:\Qt\5.12.11\5.12.11\msvc2017_64\lib\Qt5AxContainerd.lib;D:\Qt\5.12.11\5.12.11\msvc2017_64\lib\Qt5AxBased.lib;D:\Qt\5.12.11\5.12.11\msvc2017_64\lib\Qt5Xmld.lib;D:\Study\Work\HS\Ajinajin\paraModel\ParaModel\SARibbon\bin_qt5.12.11_debug_64\SARibbonBard.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>shell32.lib;D:\Qt\5.12.11\5.12.11\msvc2017_64\lib\qtmaind.lib;D:\Qt\5.12.11\5.12.11\msvc2017_64\lib\Qt5AxContainerd.lib;D:\Qt\5.12.11\5.12.11\msvc2017_64\lib\Qt5AxBased.lib;D:\Qt\5.12.11\5.12.11\msvc2017_64\lib\Qt5Xmld.lib;D:\Study\paraModel\ParaModel\SARibbon\bin_qt5.12.11_debug_64\SARibbonBard.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
@@ -96,6 +97,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BezierOpt.cpp" />
+    <ClCompile Include="BezierWidget.cpp" />
     <ClCompile Include="bpointitem.cpp" />
     <ClCompile Include="bqgraphicsitem.cpp" />
     <ClCompile Include="bqgraphicsscene.cpp" />
@@ -116,12 +119,14 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BezierOpt.h" />
+    <ClInclude Include="WarheadOglManager.h" />
+    <QtMoc Include="BezierWidget.h" />
     <ClInclude Include="DimDataConvert.h" />
     <ClInclude Include="ParaType.h" />
     <ClInclude Include="resourcemanager.h" />
     <ClInclude Include="ShaderProc.h" />
     <ClInclude Include="WarheadDataConvert.h" />
-    <ClInclude Include="WarheadOglManager.h" />
     <QtMoc Include="WarheadParaModel.h" />
     <QtMoc Include="bqgraphicsscene.h" />
     <QtMoc Include="bqgraphicsitem.h" />
@@ -143,12 +148,12 @@
     <None Include="res\shaders\coordinate.vert" />
     <None Include="res\shaders\door.frag" />
     <None Include="res\shaders\door.vert" />
-    <None Include="res\shaders\GLSL_YELLOW.frag" />
-    <None Include="res\shaders\GLSL_YELLOW.vert" />
     <None Include="res\shaders\wall.frag" />
     <None Include="res\shaders\wall.vert" />
     <None Include="res\shaders\WarheadColumn.frag" />
     <None Include="res\shaders\WarheadColumn.vert" />
+    <None Include="res\shaders\WarheadSphere.frag" />
+    <None Include="res\shaders\WarheadSphere.vert" />
     <None Include="res\shaders\window.frag" />
     <None Include="res\shaders\window.vert" />
   </ItemGroup>
