--- a/ParaModel/ParaModel.vcxproj.filters
+++ b/ParaModel/ParaModel.vcxproj.filters
@@ -70,16 +70,10 @@
     <ClCompile Include="DimDataConvert.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="WarheadDataConvert.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="WarheadParaModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BezierOpt.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="BezierWidget.cpp">
+    <ClCompile Include="WarheadDataConvert.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="WarheadOglManager.cpp">
@@ -114,9 +108,6 @@
     <ClInclude Include="WarheadDataConvert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BezierOpt.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="WarheadOglManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -137,11 +128,14 @@
     <QtMoc Include="WarheadParaModel.h">
       <Filter>Header Files</Filter>
     </QtMoc>
-    <QtMoc Include="BezierWidget.h">
-      <Filter>Header Files</Filter>
-    </QtMoc>
   </ItemGroup>
   <ItemGroup>
+    <None Include="res\shaders\GLSL_YELLOW.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\shaders\GLSL_YELLOW.vert">
+      <Filter>Resource Files</Filter>
+    </None>
     <None Include="res\shaders\coordinate.frag">
       <Filter>Resource Files</Filter>
     </None>
@@ -182,12 +176,6 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="res\shaders\window.vert">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="res\shaders\WarheadSphere.frag">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="res\shaders\WarheadSphere.vert">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="res\shaders\WarheadColumn.frag">
