--- a/ParaModel/ParaModel.vcxproj.filters
+++ b/ParaModel/ParaModel.vcxproj.filters
@@ -184,5 +184,11 @@
     <None Include="res\shaders\WarheadColumn.vert">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="res\shaders\WarheadSphere.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\shaders\WarheadSphere.vert">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
