--- a/ParaModel/ParaModel.vcxproj.filters
+++ b/ParaModel/ParaModel.vcxproj.filters
@@ -202,5 +202,17 @@
     <None Include="res\shaders\window.vert">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="res\shaders\WarheadColumn.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\shaders\WarheadColumn.vert">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\shaders\WarheadSphere.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\shaders\WarheadSphere.vert">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
